WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85450
unbounded growth of JSDOMWindowShells loading pages in the same window
https://bugs.webkit.org/show_bug.cgi?id=85450
Summary
unbounded growth of JSDOMWindowShells loading pages in the same window
Stephanie Lewis
Reported
2012-05-02 20:16:56 PDT
We have unbounded growth of JSDOMWindowShells loading pages in the same window. This is regression from
http://trac.webkit.org/changeset/115081
. The API didCreateGlobalObjectForFrame was getting a global object for every isolated world. Even one's that didn't need to access it. This had the side effect of creating a JSDOMWindowShell that the world may not have known to clean up. Solution: change the API to not create and pass around the globalObject, just to notify the client that the object is available. That way only clients that need the object will access it. <
rdar://problem/11320059
> REGRESSION (
r115083
): PLT3 shows linear memory growth and gets slower with each run
Attachments
patch
(18.94 KB, patch)
2012-05-02 20:37 PDT
,
Stephanie Lewis
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2012-05-02 20:37:10 PDT
Created
attachment 139942
[details]
patch
Brady Eidson
Comment 2
2012-05-02 21:30:02 PDT
Comment on
attachment 139942
[details]
patch Looks good.
Stephanie Lewis
Comment 3
2012-05-03 03:30:40 PDT
committed
http://trac.webkit.org/projects/webkit/changeset/115952
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug