https://bugs.webkit.org/show_bug.cgi?id=85450 unbounded growth of JSDOMWindowShells loading pages in the same window <rdar://problem/11320059> REGRESSION (r115083): PLT3 shows linear memory growth and gets slower with each run

Reviewed by Brady Eidson.

The API added for DOMWindowExtension, didCreateGlobalObjectForFrame, would create a global object
for every world, even those that did not need the callback.  This had the side effect of creating a
JSDOMWindowShell that the associated world didn't necessarily know to clean up.  Instead of creating
unnecessary objects change the API to globalObjectIsAvailableForFrame and do not pass the global object
in the API.  The object can be accessed later by those worlds which require it.

Source/WebKit2:

* WebProcess/InjectedBundle/API/c/WKBundlePage.h:
* WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.cpp:
(WebKit::InjectedBundlePageLoaderClient::globalObjectIsAvailableForFrame): rename API and remove globalObject parameter
* WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.h:
(InjectedBundlePageLoaderClient): ditto
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchGlobalObjectAvailable): ditto

Tools:

* TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionBasic.cpp:
(TestWebKitAPI):
(TestWebKitAPI::didReceiveMessageFromInjectedBundle):
* TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionBasic_Bundle.cpp:
(TestWebKitAPI):
(DOMWindowExtensionBasic):
(TestWebKitAPI::DOMWindowExtensionBasic::didCreatePage):
(TestWebKitAPI::DOMWindowExtensionBasic::globalObjectIsAvailableForFrame):
(TestWebKitAPI::globalObjectIsAvailableForFrameCallback):

Canonical link: https://commits.webkit.org/103026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115952 268f45cc-cd09-0410-ab3c-d52691b4dbfc